--- a/style.css
+++ b/style.css
@@ -6,19 +6,27 @@ body {
   /* padding: 1em; */
   -webkit-font-smoothing: antialiased;
   /* background-color: #688c5d; */
-  background-color: rgb(240, 184, 54);
+  /* background-color: rgb(240, 184, 54); */
+  background-color: rgb(255, 255, 255);
   font-size: 16px;
   color: #000;
   margin: 0;
   width: 100%;
   height: 100%;
   padding: 1em;
-  cursor: default;
+  /* cursor: default; */
 }
 
 a {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
+
+}
+
+a:hover{
+  cursor:crosshair;
+  text-decoration: underline;
 }
 
 
@@ -68,8 +76,7 @@ div{
 
 .title:hover{
   /* text-decoration: underline; */
-  font-style: italic;
-  cursor: pointer;
+
 } */
 
 
@@ -134,10 +141,8 @@ div{
 
 .c-info a:hover{
   text-decoration: underline;
-}
+  cursor: pointer;
 
-.c-info a:hover{
-  text-decoration: underline;
 }
 
 .bottom{
