--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ body {
   -webkit-font-smoothing: antialiased;
   /* background-color: #688c5d; */
   /* background-color: rgb(240, 184, 54); */
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(235, 235, 235);
+  /* background-color: rgb(218, 190, 255); */
   font-size: 16px;
   color: #000;
   margin: 0;
   width: 100%;
   height: 100%;
   padding: 1em;
-  /* cursor: default; */
+  cursor: default;
 }
 
 a {
@@ -25,7 +26,7 @@ a {
 }
 
 a:hover{
-  cursor:crosshair;
+
   text-decoration: underline;
 }
 
@@ -36,7 +37,7 @@ div{
 
 /* .list {
   /* position: absolute; */
-  width: 100%;
+  /* width: 100%; */
 } */
 
 /* .line-inner {
@@ -107,7 +108,11 @@ div{
 }
 
 .row:hover{
-  background-color: rgb(8, 180, 78);
+  background-color: rgb(192, 151, 245);
+
+
+  /* background-color: rgb(8, 180, 78); */
+  /* background-color: rgba(241, 225, 10, 0.76); */
 }
 
 .c-title{
